# rust-backend

./: .env  .gitignore  CLAUDE.md  Cargo.toml  Cargo.toml.backup  REFACTOR_SUMMARY.md  faq.md  mermaid_final.md  readme.md  rustfmt.toml
.sqlx/: query-343d1e515bb11cb5a816789a1529d3b318e1a1cb93f9839fa707afa2ba70bb3b.json  query-5531caacbd4f60cacd8c6867eafb031837f7ee27e8ec452cb99f306e4a480ca2.json  query-7c71e3914021ffd6c33ffa0d029b4a598452e43750fe262c39dac96f392b8788.json  query-a210ba926929fa3f58986551f04069d1c55d267a41adc8cd21cd6c64e9374b63.json  query-d3c9ec165018dee763cc9e881665a15d9305e8713aeb177f1d44f10a955a1c97.json  query-e0722de27239d099814590f65aa9ff777dc67c687aebf3d1eeee091084dacb11.json  query-f4ad96b56876289ba97fdf3ce3d7f343b250c973e18c0963e3fe89e1d48b7bca.json
crates/consumer-service/: Cargo.toml
crates/consumer-service/src/: lib.rs  main.rs  redis_interaction.rs  task_type_a.rs  task_type_b.rs  traits.rs
crates/consumer-service/src/processors/: cron_tasks.rs  mod.rs  task_a.rs  task_b.rs
crates/consumer-service/src/queue/: mod.rs
crates/cronjob-service/: Cargo.toml
crates/cronjob-service/src/: lib.rs  main.rs
crates/cronjob-service/src/crons/: balance.rs  mod.rs
crates/cronjob-service/src/jobs/: balance.rs  mod.rs
crates/cronjob-service/src/scheduler/: mod.rs
crates/database/: Cargo.toml
crates/database/src/: connection.rs  error.rs  lib.rs  models.rs  repositories.rs
crates/database/src/models/: project.rs
crates/database/src/repositories/: project.rs
crates/database/src/repositories/traits/: mod.rs  project.rs
crates/share_lib/: Cargo.toml
crates/share_lib/src/: error.rs  lib.rs
crates/share_lib/src/models/: config.rs  mod.rs  redis_constants.rs  redis_task.rs
crates/shared-lib/: Cargo.toml
crates/shared-lib/src/: distributed_lock.rs  lib.rs
crates/shared-lib/src/models/: config.rs  mod.rs  redis_constants.rs  redis_task.rs  tasks.rs
crates/web-service/: Cargo.toml
crates/web-service/src/: lib.rs  main.rs
crates/web-service/src/handlers/: projects.rs  users.rs
crates/web-service/src/middleware/: mod.rs
crates/web-service/src/models/: common.rs  err.rs  mod.rs  projects.rs  users.rs
crates/web-service/src/routes/: mod.rs  projects.rs  users.rs
crates/web-service/src/services/: mod.rs  project.rs  traits.rs
db_helper/: docker-compose.yml
docs/: development-guide.md  faq.md  service-lifecycle.md
migrations/: 20241218070709_create_project.down.sql  20241218070709_create_project.up.sql
src/: main.rs
src/crons/: balance.rs  mod.rs
src/models/: app.rs  common.rs  config.rs  err.rs  mod.rs  projects.rs  redis_constants.rs  redis_task.rs
src/routes/: mod.rs  projects.rs  users.rs
src/tasks/: mod.rs  task.rs  task_type_a.rs  task_type_b.rs
