[package]
name = "rust-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.83"
axum = { version = "0.8.1", features = ["macros"] }
color-eyre = "0.6.3"
dotenvy = "0.15.7"
futures = "0.3.31"
redis = { version = "0.31", features = ["connection-manager", "tokio-comp"] }
serde = { version = "1.0.216", features = ["derive"] }
serde_json = "1.0.133"
sqlx = { version = "0.8.2", features = ["macros", "migrate", "postgres", "runtime-tokio"] }
thiserror = "2.0.8"
time = "0.3.37"
tokio = { version = "1.42.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
utoipa = { version = "5.3.0", features = ["axum_extras", "openapi_extensions", "time"] }
utoipa-axum = "0.2.0"
utoipa-scalar = { version = "0.3.0", features = ["axum"] }
validator = { version = "0.20.0", features = ["derive"] }
