[package]
name = "consumer-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "consumer_service"
path = "src/lib.rs"

[dependencies]
# 基础依赖，等待后续代码移动时添加具体依赖
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
