[package]
name = "consumer-service"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[lib]
name = "consumer_service"
path = "src/lib.rs"

[dependencies]
# 基础依赖
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
# 新增依赖
color-eyre = { workspace = true }
futures = { workspace = true }
redis = { workspace = true }
time = { workspace = true }
async-trait = { workspace = true }
validator = { workspace = true }
dotenvy = { workspace = true }

# 内部依赖
shared-lib = { path = "../shared-lib" }
