[package]
name = "shared-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# 基础依赖
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
validator = { workspace = true }
color-eyre = { workspace = true }
dotenvy = { workspace = true }

# 数据库和缓存
sqlx = { workspace = true }
redis = { workspace = true }

# 其他工具
rand = { workspace = true }
